--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
     <meta name="author" content="">
 
     <link rel="shortcut icon" href="img/favicon.ico">
-    <title>Profile Bootstrap Theme</title>
+    <title>Achal Abhishek</title>
 
     <!-- Global stylesheets -->
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet">
@@ -71,11 +71,10 @@ License URL: https://creativecommons.org/licenses/by/4.0/
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
           <div class="my-auto" >
               <img src="img/logo-s.png" class="img-fluid mb-3" alt="">
-              <h1 class="mb-0">Johndon
-                <span class="text-primary">Bonsen</span>
+              <h1 class="mb-0">Achal
+                <span class="text-primary">Abhishek</span>
               </h1>
-              <div class="subheading mb-5">THE NEXT BIG IDEA IS WAITING FOR ITS NEXT BIG CHANGER WITH 
-                  <a href="#">THEMSBIT</a>
+              <div class="subheading mb-5">THE NEXT BIG IDEA IS WAITING FOR ITS NEXT BIG CHANGER WITH
               </div>
               <p class="mb-5" style="max-width: 500px;" >I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
               <ul class="list-inline list-social-icons mb-0">
@@ -127,11 +126,11 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="resume-item col-md-6 col-sm-12 " > 
                 <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class=" resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Senior Web Developer</h4>
+                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Senior Technical Writer</h4>
                       <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">March 2019 - Present</span>
+                      <span class="text-primary">March 2021 - Present</span>
                   </div>
                 </div>  
               </div>
