--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <h1 class="mb-0">Achal
                 <span class="text-primary">Abhishek</span>
               </h1>
-              <div class="subheading mb-5">THE NEXT BIG IDEA IS WAITING FOR ITS NEXT BIG CHANGER WITH
+              <div class="subheading mb-5">Senior Technical Writer | Content Designer | Documentation Leader
               </div>
-              <p class="mb-5" style="max-width: 500px;" >I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+              <p class="mb-5" style="max-width: 500px;" >I'm a Technical Writing Manager with over 12 years of experience creating clear, user-focused documentation for SaaS, AI, and telecom domains. I specialize in simplifying complexity and leading content teams.</p>
               <ul class="list-inline list-social-icons mb-0">
                   <li class="list-inline-item">
                       <a href="#">
