--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               </h1>
               <div class="subheading mb-5" style="color: white;">Senior Technical Writer | Content Designer | Documentation Leader
               </div>
-              <p class="mb-5" style="max-width: 500px; "color: white;" >I'm a Technical Writing Manager with over 12 years of experience creating clear, user-focused documentation for SaaS, AI, and telecom domains. I specialize in simplifying complexity and leading content teams.</p>
+              <p class="mb-5" style="max-width: 500px; color: white;" >I'm a Technical Writing Manager with over 12 years of experience creating clear, user-focused documentation for SaaS, AI, and telecom domains. I specialize in simplifying complexity and leading content teams.</p>
               <ul class="list-inline list-social-icons mb-0">
                   <li class="list-inline-item">
                       <a href="#">
