--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <p class="mb-5" style="max-width: 500px; color: white;" >I'm a Technical Writing Manager with over 12 years of experience creating clear, user-focused documentation for SaaS, AI, and telecom domains. I specialize in simplifying complexity and leading content teams.</p>
               <ul class="list-inline list-social-icons mb-0">
                   <li class="list-inline-item">
-                      <a href="#">
+                      <a href="https://techdochub.com/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
@@ -95,7 +95,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 </a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="#">
+                      <a href="https://www.linkedin.com/in/achal-abhishek-b3748031/">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
@@ -103,7 +103,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 </a>
                   </li>
                   <li class="list-inline-item">
-                      <a href="#">
+                      <a href="https://github.com/achalabhishek">
                   <span class="fa-stack fa-lg">
                     <i class="fa fa-circle fa-stack-2x"></i>
                     <i class="fa fa-github fa-stack-1x fa-inverse"></i>
