--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Web Developer</h4>
+                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Technical Writer</h4>
                       <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
                   </div>
                   <div class="resume-date text-md-right">
@@ -335,7 +335,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                       <div class="award-icon"></div>
                       <div class="award-content">
                           <span class="date">Apr 2017 - Mar 2018</span>
-                          <h5 class="title">Google Analytics Certified Developer</h5>
+                          <h5 class="title">Google Analytics Certified</h5>
                           <p class="description">
                               Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum mattis felis vitae risus pulvinar tincidunt. Nam ac venenatis enim. Aenean hendrerit justo sed.
                           </p>
