--- a/index.html
+++ b/index.html
@@ -126,8 +126,8 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="resume-item col-md-6 col-sm-12 " > 
                 <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class=" resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Senior Technical Writer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Technical Writer Manager</h4>
+                      <p>Spearheaded a team of 10+ writers, driving strategic documentation initiatives that improved delivery efficiency by 30%. Introduced streamlined workflows and a checklist system, reducing revision cycles by 50% and enhancing document quality. Led localization and translation efforts, significantly improving accessibility and user satisfaction across global markets. Implemented Agile-aligned documentation practices, actively participating in sprint planning and retrospectives. Developed and delivered a comprehensive onboarding program, reducing ramp-up time for new hires by 35%. Completed the Manager Development Program, enhancing leadership and strategic thinking capabilities.</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">March 2021 - Present</span>
@@ -137,33 +137,33 @@ License URL: https://creativecommons.org/licenses/by/4.0/
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #ffc107; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Technical Writer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-laptop mr-3 text-warning"></i>  Lead Technical Writer</h4>
+                      <p>Led the documentation team, overseeing the creation of user manuals, quick start guides, and installation documentation. Introduced best practices and standardized templates, improving consistency and quality across deliverables. Managed documentation translation workflows for global markets, ensuring cultural and linguistic accuracy. Collaborated with cross-functional teams to align documentation with product specifications and user needs. Contributed to a 21% increase in product adoption through improved user guides and documentation quality.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">December 2018 - March 2019</span>
+                      <span class="text-primary">June 2018 - March 2021</span>
                   </div>
                 </div>  
               </div>
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Junior Web Designer</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Senior Technical Writer</h4>
+                      <p>Developed comprehensive documentation for biometric products, including software development guides and internal training materials. Worked closely with engineering and product teams to ensure technical accuracy and user-centric content. Initiated a user feedback loop to continuously refine documentation and enhance user experience. Supported multiple product launches with timely, high-quality documentation deliverables. Played a key role in expanding the documentation team and mentoring new writers.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">July 2017 - December 2018</span>
+                      <span class="text-primary">June 2015 - May 2018</span>
                   </div>
                 </div>  
               </div>
               <div class="resume-item col-md-6 col-sm-12">
                 <div class="card mx-0 p-4 mb-5" style="border-color: #2196f3; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
-                      <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> Web Design Intern</h4>
-                      <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                      <h4 class="mb-3"><i class="fa fa-area-chart mr-3 text-primary"></i> Technical Author</h4>
+                      <p>Authored aircraft manuals, wiring diagrams, and repair guides in compliance with industry and regulatory standards. Enhanced usability through detailed visual documentation and standardized templates. Collaborated with engineering teams to translate complex technical data into user-friendly content. Recognized for outstanding documentation quality and client satisfaction. Initiated a review process that significantly reduced errors and improved content accuracy.</p>
                   </div>
                   <div class="resume-date text-md-right">
-                      <span class="text-primary">September 2018 - June 2019</span>
+                      <span class="text-primary">October 2011 - June 2015</span>
                   </div>
                 </div>  
               </div>
