--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 <div class="card mx-0 p-4 mb-5" style="border-color: #17a2b8; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class=" resume-content mr-auto">
                       <h4 class="mb-3"><i class="fa fa-globe mr-3 text-info"></i> Technical Writer Manager</h4>
-                      <p>Spearheaded a team of 10+ writers, driving strategic documentation initiatives that improved delivery efficiency by 30%. Introduced streamlined workflows and a checklist system, reducing revision cycles by 50% and enhancing document quality. Led localization and translation efforts, implemented Agile-aligned documentation practices, actively participating in sprint planning and retrospectives. Developed and delivered a comprehensive onboarding program, reducing ramp-up time for new hires by 35%. Completed the Manager Development Program, enhancing leadership and strategic thinking capabilities.</p>
+                      <p>Spearheaded a team of 10+ writers, driving strategic documentation initiatives that improved delivery efficiency by 30%. Introduced streamlined workflows and a checklist system, reducing revision cycles by 50%. Led localization and translation efforts, actively participating in sprint planning and retrospectives. Developed and delivered a comprehensive onboarding program, reducing ramp-up time for new hires by 35%. Completed the Manager Development Program, enhancing leadership and strategic thinking capabilities.</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">March 2021 - Present</span>
@@ -149,7 +149,7 @@ License URL: https://creativecommons.org/licenses/by/4.0/
                 <div class="card mx-0 p-4 mb-5" style="border-color: #28a745; box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.21);">
                   <div class="resume-content mr-auto">
                       <h4 class="mb-3"><i class="fa fa-camera mr-3 text-success"></i> Senior Technical Writer</h4>
-                      <p>Developed comprehensive documentation for biometric products, including software development guides and internal training materials. Worked closely with engineering and product teams to ensure technical accuracy and user-centric content. Initiated a user feedback loop to continuously refine documentation and enhance user experience. Supported multiple product launches with timely, high-quality documentation deliverables. Played a key role in expanding the documentation team and mentoring new writers.</p>
+                      <p>Developed comprehensive documentation for biometric products, including software development guides and internal training materials. Worked closely with engineering and product teams to ensure technical accuracy and user-centric content. Initiated a user feedback loop to continuously refine documentation and enhance user experience. Played a key role in expanding the documentation team and mentoring new writers.</p>
                   </div>
                   <div class="resume-date text-md-right">
                       <span class="text-primary">June 2015 - May 2018</span>
